Page MenuHome GnuPG

[PATCH] gpg-protect-tool doesn't pass DISPLAY to agent
Closed, ResolvedPublic

Description

Importing PKCS#12 keys with gpgsm doesn't work properly (at least under KDE) -

Details

Event Timeline

tootea set External Link to https://bugzilla.redhat.com/show_bug.cgi?id=548528.Apr 11 2012, 10:31 PM
tootea added projects: gnupg, Bug Report, Fedora.
tootea set Version to 2.0.18.

KDE's Kontact has been developed along with GnuPG, thus I wonder why you have
this problem. Can you please explain the problem a bit more detailed?

This is in no way specific to Kleopatra (the KDE certificate manager), gpgsm --

Is it just me, or are both of my messages truncated to a single line?!

I can confirm the problem described in the redhat bug still exists. Ran into it
on ubuntu 14.4 with gnupg 2.0.18 (with use-agent in the gpg config).

gpgsm --import <cert> failed with decryption failed without opening pinentry.
But after unsetting GPG_AGENT_INFO it worked.

The gnupg version mentioned in T1402 (aheinecke on Jun 25 2014, 03:48 PM / Roundup) should be 2.0.22 and not 2.0.18

commit 045c979 has the patch to be released with 2.0.25.

gniibe claimed this task.

Confirmed that this is fixed in GnuPG in 2.0.25. In the external reference (the
bugzilla at RedHat), it's also closed already.
In the SCM (http://pkgs.fedoraproject.org/cgit/gnupg2.git), it's
1f6281e091d124170238821e7b9150ab56ff1195 which
removed the patch.